---
source: crates/integration-tests/src/tests/native_query.rs
expression: "graphql_query(r#\"\n                query {\n                  titleWordFrequency(\n                    where: {count: {_eq: 2}}\n                    order_by: {id: Asc}\n                    offset: 100\n                    limit: 25\n                  ) {\n                    id\n                    count\n                  }\n                }\n            \"#).run().await?"
---
data:
  titleWordFrequency:
    - id: Amish
      count: 2
    - id: Amor?
      count: 2
    - id: Anara
      count: 2
    - id: Anarchy
      count: 2
    - id: Anastasia
      count: 2
    - id: Anchorman
      count: 2
    - id: Andre
      count: 2
    - id: Andrei
      count: 2
    - id: Andromeda
      count: 2
    - id: Andrè
      count: 2
    - id: Angela
      count: 2
    - id: Angelica
      count: 2
    - id: "Angels'"
      count: 2
    - id: "Angels:"
      count: 2
    - id: Angst
      count: 2
    - id: Animation
      count: 2
    - id: Annabelle
      count: 2
    - id: Anonyma
      count: 2
    - id: Anonymous
      count: 2
    - id: Answer
      count: 2
    - id: Ant
      count: 2
    - id: Antarctic
      count: 2
    - id: Antoinette
      count: 2
    - id: Anybody
      count: 2
    - id: Anywhere
      count: 2
errors: ~
